Finish mdd reduction algorithm and its corresponding tests